# refinancing

./: .gitignore  Anchor.toml  BLUEPRINT.md  BUILD.md  Readme.md  package-lock.json  package.json  seed.mjs
app/: .gitignore  next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/components/: GlobalHealthCard.tsx  PositionTable.tsx  RefinanceModal.tsx  Toast.tsx  WalletProvider.tsx  (+5 more)
programs/perp-dex/: Cargo.toml
programs/perp-dex/src/: constants.rs  error.rs  event.rs  lib.rs
programs/perp-dex/src/engine/: funding.rs  matching_against.rs  matching_engine.rs  mod.rs  position_manager.rs  risk_engine.rs
programs/perp-dex/src/instructions/: cancel_order.rs  deposit_colletral.rs  initialize_market.rs  initlaize_global_config.rs  liquidation.rs  mod.rs  place_order.rs  position_ins.rs  process_order.rs  reset_queues.rs  reset_slab.rs  setmark_price.rs  toggle_trading.rs  update_funding.rs  update_oracle_price.rs  withdraw.rs
programs/perp-dex/src/state/: bid_ask.rs  event_queue.rs  global.rs  market.rs  mod.rs  order.rs  position.rs  request_queue.rs  slab.rs  slot.rs  user_colletral.rs
programs/perp-dex/src/utils/: engine_utils.rs  make_order_id.rs  mod.rs
programs/refinance-router/: Cargo.toml
programs/refinance-router/src/: errors.rs  lib.rs
programs/refinance-router/src/instructions/: cancel_refinance.rs  confirm_step.rs  finalise_refinance.rs  initiate_refinance.rs  mod.rs
programs/refinance-router/src/state/: mod.rs  refinance_state.rs
tests/: perpx.ts  refinance-router.ts
(+52 files in other folders)
